/*
 * Chats proto file
 */

syntax = "proto3";

import "messages.proto";
import "users.proto";

option go_package = "github.com/iLopezosa/api-wars/grpc/pb";

service Chats {
  rpc ListChats (ListChatsRequest) returns (ListChatsResponse) {}
  rpc GetChat (GetChatRequest) returns (GetChatResponse) {}
  rpc CreateChat (CreateChatRequest) returns (CreateChatResponse) {}
  rpc AddUsersToChat (AddUsersToChatRequest) returns (AddUsersToChatResponse) {}
  rpc DeleteChat (DeleteChatRequest) returns (DeleteChatResponse) {}
  rpc GetChatMessages (GetChatMessagesRequest) returns (GetChatMessagesResponse) {}
  rpc GetChatUserMessages (GetChatUserMessagesRequest) returns (GetChatUserMessagesResponse) {}
}

message Chat {
  uint64 id = 1;
  repeated MessageDTO messages = 2;
  repeated UserDTO participants = 3;
  string created_at = 4;
  string updated_at = 5;
  string deleted_at = 6;
}

message ListChatsRequest {}

message ListChatsResponse {
  repeated Chat chats = 1;
}

message GetChatRequest {
  uint64 user_id = 1;
}

message GetChatResponse {
  Chat chat = 1;
}

message CreateChatRequest {
  Chat chat = 1;
}

message CreateChatResponse {
  Chat chat = 1;
}

message AddUsersToChatRequest {
  uint64 chat_id = 1;
  repeated uint64 user_ids = 2;
}

message AddUsersToChatResponse {
  Chat chat = 1;
}

message DeleteChatRequest {
  uint64 id = 1;
}

message DeleteChatResponse {}

message GetChatMessagesRequest {
  uint64 id = 1;
}

message GetChatMessagesResponse {
  repeated MessageDTO messages = 1;
}

message GetChatUserMessagesRequest {
  uint64 chat_id = 1;
  uint64 user_id = 2;
}

message GetChatUserMessagesResponse {
  repeated MessageDTO messages = 1;
}